<resources>
    <string name="app_name">Instill</string>
    <string name="welcome_to_resume_skill_enhancer">Welcome To Instill(Resume Skill Enhancer)</string>
    <string name="createnewresume">Create New Resume</string>
    <string name="add_your_details">Add Your Details</string>
    <string name="skills">Skills</string>
    <string name="experience_details">Experience Details</string>
    <string name="educational_details">Educational Details</string>
    <string name="personal_details">Personal Details</string>
    <string name="projects">Projects</string>
    <string name="proceed">Proceed</string>
    <string name="pdf_viewer">PDF Viewer</string>
    <string name="dismiss">Dismiss</string>
    <string name="no_data_found_please_click_add_to_add_new_data">No Data Found. Please click add to add new Data</string>
    <string name="done">Done</string>
    <string name="add">Add</string>
    <string name="degree_course">Degree / Course</string>
    <string name="university_school">University / School</string>
    <string name="grade_score">Grade / Score</string>
    <string name="year">Year</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="email_address">Email Address</string>
    <string name="linkedin_link">LinkedIn Link</string>
    <string name="address">Address</string>
    <string name="state">State / Province</string>
    <string name="country">Country</string>
    <string name="phone_number">Phone Number</string>
    <string name="save">Save</string>
    <string name="experience">Experience</string>
    <string name="company_name">Company Name</string>
    <string name="job_title">Job Title</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="description">Description</string>
    <string name="skill">Skill</string>
    <string name="select_skill">Select Skill</string>
    <string name="select_course">Select Course</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="advanced">Advanced</string>
    <string name="expert">Expert</string>
    <string name="project_name">Project Name</string>
    <string name="search_jobs_in_your_area">Search Jobs In Your Area</string>
    <string name="show_analysis">Show Analysis</string>
    <string name="your_resume_analysis">Your Resume Analysis</string>
</resources>