<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/fifteen_dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/seven_dp"
        android:text="@string/skills"
        android:textColor="@color/black"
        android:textSize="@dimen/twenty_sp" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinnerCourses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fifteen_dp"
        android:background="@android:drawable/btn_dropdown"
        android:hint="@string/skill"
        android:prompt="@string/select_course"
        android:spinnerMode="dropdown"
        android:textColor="@color/black"
        android:textSize="@dimen/sixteen_sp" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinnerSkills"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fifteen_dp"
        android:background="@android:drawable/btn_dropdown"
        android:hint="@string/skill"
        android:prompt="@string/select_skill"
        android:spinnerMode="dropdown"
        android:textColor="@color/black"
        android:textSize="@dimen/sixteen_sp" />

    <RadioGroup
        android:id="@+id/formSkillsRadiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioBeginner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beginner" />

        <RadioButton
            android:id="@+id/radioIntermediate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intermediate" />

        <RadioButton
            android:id="@+id/radioAdvanced"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/advanced" />

        <RadioButton
            android:id="@+id/radioExpert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expert" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/linBtns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fifteen_dp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDismiss"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/dismiss" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/save"
            android:textColor="@color/black" />

    </LinearLayout>

</LinearLayout>
