<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/fifteen_dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/seven_dp"
        android:text="@string/experience"
        android:textColor="@color/black"
        android:textSize="@dimen/twenty_sp" />

    <EditText
        android:id="@+id/edtCompany"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fifteen_dp"
        android:background="@drawable/edt_background"
        android:hint="@string/company_name"
        android:padding="@dimen/fifteen_dp"
        android:textColor="@color/black"
        android:textSize="@dimen/sixteen_sp" />

    <EditText
        android:id="@+id/edtJobTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fifteen_dp"
        android:background="@drawable/edt_background"
        android:hint="@string/job_title"
        android:padding="@dimen/fifteen_dp"
        android:textColor="@color/black"
        android:textSize="@dimen/sixteen_sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtStartDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fifteen_dp"
            android:layout_marginEnd="@dimen/fifteen_dp"
            android:layout_weight="1"
            android:background="@drawable/edt_background"
            android:hint="@string/start_date"
            android:padding="@dimen/fifteen_dp"
            android:textColor="@color/black"
            android:textSize="@dimen/sixteen_sp" />

        <EditText
            android:id="@+id/edtEndDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fifteen_dp"
            android:layout_marginTop="@dimen/fifteen_dp"
            android:layout_weight="1"
            android:background="@drawable/edt_background"
            android:hint="@string/end_date"
            android:padding="@dimen/fifteen_dp"
            android:textColor="@color/black"
            android:textSize="@dimen/sixteen_sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/edtJobDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fifteen_dp"
        android:background="@drawable/edt_background"
        android:gravity="start"
        android:hint="@string/description"
        android:lines="3"
        android:padding="@dimen/fifteen_dp"
        android:textColor="@color/black"
        android:textSize="@dimen/sixteen_sp" />

    <LinearLayout
        android:id="@+id/linBtns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fifteen_dp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDismiss"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/dismiss" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/save"
            android:textColor="@color/black" />

    </LinearLayout>

</LinearLayout>
