<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/fifteen_dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/seven_dp"
        android:text="@string/projects"
        android:textColor="@color/black"
        android:textSize="@dimen/twenty_sp" />

    <EditText
        android:id="@+id/edtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fifteen_dp"
        android:background="@drawable/edt_background"
        android:hint="@string/project_name"
        android:padding="@dimen/fifteen_dp"
        android:textColor="@color/black"
        android:textSize="@dimen/sixteen_sp" />

    <EditText
        android:id="@+id/edtProjectDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fifteen_dp"
        android:background="@drawable/edt_background"
        android:gravity="start"
        android:hint="@string/description"
        android:lines="3"
        android:padding="@dimen/fifteen_dp"
        android:textColor="@color/black"
        android:textSize="@dimen/sixteen_sp" />

    <LinearLayout
        android:id="@+id/linBtns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fifteen_dp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDismiss"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/dismiss" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/save"
            android:textColor="@color/black" />

    </LinearLayout>

</LinearLayout>
